added more UI features to the front end

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button class="btn btn-primary" id="getAdd">Go add</button>
     <h2 id="solution"></h2>
     <br>
+    <span>http://localhost:4000</span>
     <input type="text" id="url">
     <button class="btn btn-primary" id="getUrl">Go</button>
     <h2 id="resUrl"></h2>
