gravatar image feature is working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Make Your Own APIs</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <style>
+    .example:hover{
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <h1 class="jumbotron text-center">Make Your Own APIs</h1>
@@ -25,7 +30,14 @@
     <input type="text" id="url">
     <button class="btn btn-primary" id="getUrl">Go</button>
     <h2 id="resUrl"></h2>
-    
+    <img src="" alt=" " id="image">
+    <br>
+    <div class="example" id="exSquare">/math/square/5</div>
+    <div class="example" id="exAdd">/math/add/3/3/3</div>
+    <div class="example" id="exSentence">/sentence/A%20Sentence%20here</div>
+    <div class="example" id="exGravatar">/gravatar/samer.buna@gmail.com</div>
+
+
   </div>
   
 
